testsuite/tests/properties/invalid_lazy_field/test.out
== entity_info_1.lkt ==
entity_info_1.lkt:7:21: error: Cannot use entity info, as explicitly forbidden
7 |     @lazy p: Bool = self.info.md.flag
  |                     ^^^^^^^^^


== entity_info_2.lkt ==
entity_info_2.lkt:8:29: error: Call to FooNode.flag_set must be done on an entity
8 |     @export @lazy p: Bool = node.flag_set()
  |                             ^^^^^^^^^^^^^^^


== inconsistent_base_1.lkt ==
inconsistent_base_1.lkt:8:19: error: lazy fields cannot override properties, and conversely
8 |     @export @lazy p: Int = 2
  |                   ^^^^^^^^^^


== inconsistent_base_2.lkt ==
inconsistent_base_2.lkt:8:13: error: lazy fields cannot override properties, and conversely
8 |     @export fun p(): Int = 2
  |             ^^^^^^^^^^^^^^^^


lkt_compile: Done
